fixed css issues causing the wrap to float left

--- a/css/genericCSS.css
+++ b/css/genericCSS.css
@@ -30,6 +30,12 @@ p {
   font-size: 1em;
   margin: 10px;
 }
+a{
+	color: white;
+  margin: 3% 0% 3% 0%;
+	text-decoration: none;
+	font-size: 5em;
+}
 
 /* Attributes For The Menu Button */
 .container {
@@ -79,9 +85,6 @@ p {
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
-.nav a{
-	color: white;
-}
 .nav a:hover{
 	text-decoration: underline;
 }
@@ -103,7 +106,8 @@ p {
 .wrap{
 	position: absolute;
 	top: 50%;
-	transform: translateY(-50%);
+  left: 50%;
+	transform: translate(-50%, -50%);
 	overflow: hidden;
   opacity: 0;
 	padding-top: 100px;
