--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,14 @@
-
+@import url('https://fonts.googleapis.com/css?family=Quicksand:300');
+* {
+	text-align: center;
+	font-family: 'Quicksand', sans-serif;
+	margin: 0px;
+	padding: 0px;
+}
 h1{
 	font-size: 16vh;
 	font-weight: 800;
 	letter-spacing: 2px;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
 }
 div{
 	height: 100vh;
@@ -17,6 +19,9 @@ h3{
 	font-weight: 400;
 	font-size: 10vh;
 	color: white;
+
+}
+.wrap{
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -64,7 +69,7 @@ h3{
 	position: relative;
 }
 
-.top h1 {
+.wrap {
   opacity: 0;
 	padding-top: 100px;
     -webkit-transition: opacity 2s ease-in, padding-top 1s ease-out;
@@ -74,7 +79,7 @@ h3{
             transition: opacity 2s ease-in, padding-top 1s ease-out;
 }
 
-.top h1.load {
+.wrap.load {
     opacity: 1;
     padding-top: 0px;
 }
