--- a/css/projCSS.css
+++ b/css/projCSS.css
@@ -29,15 +29,11 @@ p{
 	padding: 0px 3.5vw 0px 3.5vw;
 }
 a{
-	margin: 3% 0% 3% 0%;
 	color: black;
-	text-decoration: none;
-	font-size: 2vw;
 }
 a:hover{
 	color: gray;
 }
-
 img {
 	display: none;
 }
